# Brain-Games

./: .gitignore  README.md  pyproject.toml
brain_games/: cli.py  engine.py
brain_games/games/: calc.py  check_even.py  even.py  gcd  gcd.py  prime.py  progression.py
brain_games/logics/: check_even.py  hello.py  logics.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
